x1210 Support bio risk (block registration)
Add bio risk entity.
Support admin for bio risks.
Bio risks can be linked to samples.
Copy bio risks from old samples when new samples are created.
Expect bio risk in block registration.
Expect bio risk in block file registration.

Squashed commit of the following:

commit 0b76158b8277e283f46e802a98ff2f9df8a793ce
Author: David Robinson <14000840+khelwood@users.noreply.github.com>
Date:   Wed Oct 30 11:51:12 2024 +0000

    Support bio risk in block register excel file

commit 7541d6e46646d248fa50c08708cdc6c10747f82f
Author: David Robinson <14000840+khelwood@users.noreply.github.com>
Date:   Wed Oct 30 09:59:30 2024 +0000

    Complete the unit tests for BioRiskService

commit 391f2df61126bd1e7f5300562b36826aa13d4eb7
Author: David Robinson <14000840+khelwood@users.noreply.github.com>
Date:   Wed Oct 30 09:41:06 2024 +0000

    When an op creates new samples, copy the bio risks from the sources

commit 6f2e43df4ba29ec9e19b756a0aae5d0a58ea91f2
Author: David Robinson <14000840+khelwood@users.noreply.github.com>
Date:   Mon Oct 28 15:46:12 2024 +0000

    More support for bio risks, and save bio risks in block registration

commit 4c1f3e5ef8f620b6e103d22e0ce510184d36cbaf
Author: David Robinson <14000840+khelwood@users.noreply.github.com>
Date:   Thu Oct 24 13:55:39 2024 +0100

    Basic support for BioRisk (biological risk numbers)